hard-gists/1041172/run.log
=== Docker Run Log for 1041172 ===
Started at: Mi 29. Okt 11:46:23 CET 2025

[2025-10-29 11:46:23] START: Running container for 1041172
[2025-10-29 11:46:24] SUCCESS: Container 192dd5d3dbdf5897a67b55043be7cda4bcf97b6f85ce8a996a4ee97b6d90bfe6 started for 1041172
=== Container logs for 1041172 ===
  File "/snippet.py", line 14
    print "Not all commands entered"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1041172 ===
[2025-10-29 11:46:26] INFO: Container 192dd5d3dbdf5897a67b55043be7cda4bcf97b6f85ce8a996a4ee97b6d90bfe6 has stopped
